[Fix #62701710] Searchers see more spacing between links in BBGs

--- a/app/assets/stylesheets/searches/_results.less
+++ b/app/assets/stylesheets/searches/_results.less
@@ -70,7 +70,7 @@
     }
 
     .featured-collection ul {
-      max-height: 4.75em;
+      max-height: 6.8em;
     }
   }
 
@@ -129,7 +129,7 @@
 
     > li {
       .text-overflow();
-      line-height: 1.2em;
+      line-height: 1.7em;
       vertical-align: top;
     }
 
